tests/samples/negative/pattern_matching/enum_payload_unknown_binding.ax
module enum_payload_unknown_binding;

enum Packet: u8 {
    int(i32) = 1,
}

fn main() -> i32 {
    return match Packet.int(1) {
        .int(value) => missing,
    };
}
